--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+.md-alert-primary {
+    background-color: #d7eaf8;
+    border: 1px solid #d7eaf8;
+    padding: 1rem;
+}
+
+.dark .md-alert-primary {
+    background-color: #004173;
+    border: 1px solid #004173;
+    padding: 1rem;
+}
+
 .md-alert-success {
     background-color: #dff6dd;
     border: 1px solid #dff6dd;
@@ -22,6 +34,18 @@
     padding: 1rem;
 }
 
+.md-alert-warning {
+    background-color: #fff4ce;
+    border: 1px solid #fff4ce;
+    padding: 1rem;
+}
+
+.dark .md-alert-warning {
+    background-color: #6a4b16;
+    border: 1px solid #6a4b16;
+    padding: 1rem;
+}
+
 .docon {
     font-family: docons;
     font-size: inherit;
@@ -43,4 +67,12 @@
 
 .docon-memo::before {
     content: "📝";
+}
+
+.docon-warning::before {
+    content: "⚠️";
+}
+
+.docon-information::before {
+    content: "ℹ️";
 }
